--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "author": "Eithel Meza",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.23"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.23",
+    "mongoose-unique-validator": "^1.0.6"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
