--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "back-end",
-  "version": "1.0.0",
-  "description": "Backend para el front del sistema web",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Eithel Meza",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.23",
-    "mongoose-unique-validator": "^1.0.6"
-  },
-  "devDependencies": {
-    "nodemon": "^1.12.1"
-  }
+    "name": "backend-server",
+    "version": "1.0.0",
+    "description": "Servidor backend del curso de Angular Avanzado",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Fernando Herrera",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.18.2",
+        "express": "^4.16.2",
+        "express-fileupload": "^0.3.0",
+        "jsonwebtoken": "^8.1.0",
+        "mongoose": "^4.13.5",
+        "mongoose-unique-validator": "^1.0.6",
+        "serve-index": "^1.9.1"
+    },
+    "devDependencies": {
+        "nodemon": "^1.12.1"
+    }
 }
