--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-DB_CNN=mongodb://localhost:27017/hospitalDB
+DB_CNN=mongodb+srv://eithelj:canchia123@cluster0-dqd4k.azure.mongodb.net/test
 JWT_SECRET=Holsdj28397kjHd7@asdyui3897k
 
 
